--- a/package.json
+++ b/package.json
@@ -18,9 +18,23 @@
         "popper.js": "^1.16.1",
         "postcss": "^8.1.14",
         "resolve-url-loader": "^3.1.2",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
+        "sass": "1.32.8",
+        "sass-loader": "8.0.2",
         "vue": "^2.6.12",
+        "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "feather-icons": "^4.28.0",
+        "moment": "^2.29.1",
+        "qs": "^6.10.1",
+        "uuid": "^8.3.2",
+        "vue-frag": "^1.2.0",
+        "vue-fragment": "^1.5.2",
+        "vue-mobile-detection": "^1.0.0",
+        "vue-router": "^3.5.2",
+        "vue-router-multiguard": "^1.0.3",
+        "vuex": "^3.6.2"
     }
 }
