--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,10 @@
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
             "Bsb\\Foundation\\": "lib/foundation/"
-        }
+        },
+        "files": [
+            "helpers/foundation.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
